Start Work On Project

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     
 
-    hello
+    <!-- Navbar And hero Sections Starts From Here -->
+    <section id="hero">
+
+        <div class="last">
+            
+        </div>
+    </section>
 
 
 
