Finish The Banner

--- a/index.html
+++ b/index.html
@@ -13,7 +13,34 @@
     <section id="hero">
 
         <div class="last">
-            
+            <div class="first">
+                <img src="assets/search.svg" width="25px" height="25px">
+                <img src="assets/shopping-basket.svg" height="25px" width="25px">
+                <img src="assets/menu-burger.svg" height="25px" width="25px">
+            </div>
+
+
+            <div class="details">
+                <p>Fat</p>
+                <h3>0.5g</h3>
+                <p>Sodium</p>
+                <h3>0.5g</h3>
+                <p>Carbs</p>
+                <h3>85g</h3>
+                <p>Fiber</p>
+                <h3>13g</h3>
+                <p>Sugar</p>
+                <h3>7g</h3>
+                <p>Protein</p>
+                <h3>4g</h3>
+                <p>Calcium</p>
+                <h3>150g</h3>
+                <p>Iron</p>
+                <h3>13mg</h3>
+                <p>Potassium</p>
+                <h3>409mg</h3>
+                
+            </div>
         </div>
     </section>
 
