--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@
                 
             </div>
         </div>
+
+        <div class="navbar">
+            <div class="logo">
+                <p>PaleoValley</p>
+            </div>
+
+
+
+            <div class="links">
+                <ul>
+                    <li>Product</li>
+                    <li>Features</li>
+                    <li>Reviews</li>
+                    <li>About us</li>
+                </ul>
+            </div>
+        </div>
     </section>
 
 
