Start of Hero section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,19 @@
                 </ul>
             </div>
         </div>
+
+
+        <div class="bigger">
+
+            <div class="big1">
+                <p>INTRO</p>
+            </div>
+
+
+            <div class="big2">
+
+            </div>
+        </div>
     </section>
 
 
