--- a/index.html
+++ b/index.html
@@ -65,12 +65,35 @@
 
             <div class="big1">
                 <p>INTRO</p>
+                <h1 style="margin-top: 20px;">PaleoValley Organic <br> Supergreens Powder</h1>
+                <p style="margin-top: 20px;">Get Delicious energy support with 23 organic raw superfoods: <br> Organic Supergreens is a powerfull blend of organic antioxidents <br> rich superfoods, including kale, brocolli and turmeric gently dried to <br> preserve their nutrients and make them easy to  absorb by your digestive tract.</p>
+                <button style="color: #fefefe; margin-top: 20px; padding-left: 40px; padding-right: 40px; padding-top: 20px; padding-bottom: 20px; background-color: #b74e21; border-radius: 8px; cursor: pointer;">Order Now</button>
+
+                <div class="threads" style="display: flex; gap: 20px; margin-top: 20px;">
+                    <div class="d1">
+                        <p style="font-size: 20px;">500M+</p>
+                        <p>Happy Clients</p>
+                    </div>
+
+
+                    <div class="d2">
+                        <p style="font-size: 20px;">20M+</p>
+                        <p>Positive Reviews</p>
+                    </div>
+
+
+                    <div class="d3">
+                        <p style="font-size: 20px;">100%</p>
+                        <p>Organic Food</p>
+                    </div>
+
+                </div>
             </div>
+        </div>
 
 
-            <div class="big2">
-
-            </div>
+        <div class="big2" style="z-index: 7; position: fixed; right: 0; margin-right: 150px;">
+            <img src="assets/pvsgt-shop.png" width="500px" height="500px">
         </div>
     </section>
 
