Complete The Hero Section

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
             <div class="big1">
                 <p>INTRO</p>
-                <h1 style="margin-top: 20px;">PaleoValley Organic <br> Supergreens Powder</h1>
-                <p style="margin-top: 20px;">Get Delicious energy support with 23 organic raw superfoods: <br> Organic Supergreens is a powerfull blend of organic antioxidents <br> rich superfoods, including kale, brocolli and turmeric gently dried to <br> preserve their nutrients and make them easy to  absorb by your digestive tract.</p>
+                <h1 style="margin-top: 20px; font-size: 50px;">PaleoValley Organic <br> Supergreens Powder</h1>
+                <p style="margin-top: 20px; font-size: 18px;">Get Delicious energy support with 23 organic raw superfoods: <br> Organic Supergreens is a powerfull blend of organic antioxidents <br> rich superfoods, including kale, brocolli and turmeric gently dried to <br> preserve their nutrients and make them easy to  absorb by your digestive <br> tract.</p>
                 <button style="color: #fefefe; margin-top: 20px; padding-left: 40px; padding-right: 40px; padding-top: 20px; padding-bottom: 20px; background-color: #b74e21; border-radius: 8px; cursor: pointer;">Order Now</button>
 
                 <div class="threads" style="display: flex; gap: 20px; margin-top: 20px;">
@@ -94,6 +94,39 @@
 
         <div class="big2" style="z-index: 7; position: fixed; right: 0; margin-right: 150px;">
             <img src="assets/pvsgt-shop.png" width="500px" height="500px">
+        </div>
+
+
+
+        <div class="direction">
+            <div class="arrow-left">
+                <img src="assets/arrow-small-left.svg" width="20px" height="20px" style="cursor: pointer;">
+            </div>
+
+
+            <div class="dots">
+                <div class="circle active">
+                <div class="dot"></div>
+                </div>
+                <div class="circle">
+                <div class="dot"></div>
+                </div>
+                <div class="circle">
+                <div class="dot"></div>
+                </div>
+                <div class="circle">
+                <div class="dot"></div>
+                </div>
+                <div class="circle">
+                <div class="dot"></div>
+                </div>
+            </div>
+
+
+
+            <div class="arrow-right">
+                <img src="assets/arrow-small-right.svg" width="20px" height="20px" style="cursor: pointer;">
+            </div>
         </div>
     </section>
 
