Fully Complete The Navbar And Hero Section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar And hero Sections Starts From Here -->
     <section id="hero">
 
-        <div class="last">
+        <div class="last" id="last">
             <div class="first">
                 <img src="assets/search.svg" width="25px" height="25px">
                 <img src="assets/shopping-basket.svg" height="25px" width="25px">
@@ -20,7 +20,7 @@
             </div>
 
 
-            <div class="details">
+            <div class="details" id="details">
                 <p>Fat</p>
                 <h3>0.5g</h3>
                 <p>Sodium</p>
@@ -92,14 +92,14 @@
         </div>
 
 
-        <div class="big2" style="z-index: 7; position: fixed; right: 0; margin-right: 150px;">
-            <img src="assets/pvsgt-shop.png" width="500px" height="500px">
+        <div class="big2" id="big2" style="z-index: 7; position: fixed; right: 0; margin-right: 150px;">
+            <img id="big2-img" src="assets/img6.png" width="500px" height="500px">
         </div>
 
 
 
         <div class="direction">
-            <div class="arrow-left">
+            <div class="arrow-left" id="arrow-left">
                 <img src="assets/arrow-small-left.svg" width="20px" height="20px" style="cursor: pointer;">
             </div>
 
@@ -124,7 +124,7 @@
 
 
 
-            <div class="arrow-right">
+            <div class="arrow-right" id="arrow-right">
                 <img src="assets/arrow-small-right.svg" width="20px" height="20px" style="cursor: pointer;">
             </div>
         </div>
