--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="first">
                 <img src="assets/search.svg" width="25px" height="25px">
                 <img src="assets/shopping-basket.svg" height="25px" width="25px">
-                <img src="assets/menu-burger.svg" height="25px" width="25px">
+                <img src="assets/menu-burger.svg" height="25px" width="25px" style="display: none;">
             </div>
 
 
@@ -92,7 +92,7 @@
         </div>
 
 
-        <div class="big2" id="big2" style="z-index: 7; position: fixed; right: 0; margin-right: 150px;">
+        <div class="big2" id="big2" style="z-index: 7; position: absolute; right: 0; margin-right: 150px;">
             <img id="big2-img" src="assets/img6.png" width="500px" height="500px">
         </div>
 
