--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="first">
                 <img src="assets/search.svg" width="25px" height="25px">
                 <img src="assets/shopping-basket.svg" height="25px" width="25px">
-                <img src="assets/menu-burger.svg" height="25px" width="25px" style="display: none;">
+                <img src="assets/menu-burger.svg" height="25px" width="25px" class="image3">
             </div>
 
 
