--- a/index.html
+++ b/index.html
@@ -16,28 +16,29 @@
             <div class="first">
                 <img src="assets/search.svg" width="25px" height="25px">
                 <img src="assets/shopping-basket.svg" height="25px" width="25px">
-                <img src="assets/menu-burger.svg" height="25px" width="25px" class="image3">
+                <img src="assets/menu-burger.svg" height="25px" width="25px" class="image3" id="image">
+                <img src="assets/cross.png" width="20px" height="20px" class="image4" id="cross">
             </div>
 
 
             <div class="details" id="details">
-                <p>Fat</p>
+                <p >Fat</p>
                 <h3>0.5g</h3>
-                <p>Sodium</p>
+                <p >Sodium</p>
                 <h3>0.5g</h3>
-                <p>Carbs</p>
+                <p >Carbs</p>
                 <h3>85g</h3>
-                <p>Fiber</p>
+                <p >Fiber</p>
                 <h3>13g</h3>
-                <p>Sugar</p>
+                <p >Sugar</p>
                 <h3>7g</h3>
-                <p>Protein</p>
+                <p >Protein</p>
                 <h3>4g</h3>
-                <p>Calcium</p>
+                <p >Calcium</p>
                 <h3>150g</h3>
-                <p>Iron</p>
+                <p >Iron</p>
                 <h3>13mg</h3>
-                <p>Potassium</p>
+                <p >Potassium</p>
                 <h3>409mg</h3>
                 
             </div>
@@ -129,6 +130,9 @@
             </div>
         </div>
     </section>
+
+
+    
 
 
 
