--- a/index.html
+++ b/index.html
@@ -131,11 +131,15 @@
         </div>
     </section>
 
-
+   <!-- Catalog section start here -->
     <div class="catalog">
-        
+        <img src="assets/62a228db443b787d58371261.png" width="150px" height="50px">
+        <img src="assets/meta.png" width="100px" height="50px">
+        <img src="assets/paypal.png" width="100px" height="70px">
+        <img src="assets/photoshop-lightroom.png" width="100px" height="70px">
+        <img src="assets/photoshop.png" width="100px" height="70px">
     </div>
-
+  <!-- Catalog Ends Here -->
 
 
 
