Responsive the catalog

--- a/index.html
+++ b/index.html
@@ -139,7 +139,13 @@
         <img src="assets/photoshop-lightroom.png" width="100px" height="70px">
         <img src="assets/photoshop.png" width="100px" height="70px">
     </div>
-  <!-- Catalog Ends Here -->
+   <!-- Catalog Ends Here -->
+
+
+
+   <!-- About us Section Starts From Here -->
+
+   
 
 
 
