complete the first part of about

--- a/index.html
+++ b/index.html
@@ -145,7 +145,25 @@
 
    <!-- About us Section Starts From Here -->
 
-   
+   <section id="about">
+
+    <div class="big1">
+        <div class="txt">
+        <p>About us</p>
+        <h1>Why our deals are <br> best in the market</h1>
+        </div>
+
+        <div class="text">
+            <p>At plaeovalley our mission is to help people reclaim vibrant health.We provide <br> Products that prioritize nutrients density in an industry that prioritizes everything <br> else. we believe that every dietry choice and every added ingredients is a <br> powerfull oppurtunities to love and care for ones</p>
+        </div>
+    </div>
+
+
+
+    <div class="big2">
+        
+    </div>
+   </section>
 
 
 
