The missions section  is completed

--- a/index.html
+++ b/index.html
@@ -147,21 +147,53 @@
 
    <section id="about">
 
-    <div class="big1">
+    <div class="bigone">
         <div class="txt">
-        <p>About us</p>
-        <h1>Why our deals are <br> best in the market</h1>
+        <p style="font-size: 20px; margin-bottom: 30px;">About us</p>
+        <h1 style="font-size: 36px;">Why our deals are <br> best in the market</h1>
         </div>
 
-        <div class="text">
-            <p>At plaeovalley our mission is to help people reclaim vibrant health.We provide <br> Products that prioritize nutrients density in an industry that prioritizes everything <br> else. we believe that every dietry choice and every added ingredients is a <br> powerfull oppurtunities to love and care for ones</p>
-        </div>
+        <div class="text" style="margin-top: 60px;">
+            <p style="font-size: 14px;">At plaeovalley our mission is to help people reclaim vibrant health.We provide <br> Products that prioritize nutrients density in an industry that prioritizes everything <br> else. we believe that every dietry choice and every added ingredients is a <br> powerfull oppurtunities to love and care for ones</p>
+        </div> 
     </div>
 
 
 
-    <div class="big2">
-        
+    <div class="bigdo">
+        <div class="divs">
+            <div class="awal">
+                <p style="font-size: 22px;">Our Story</p>
+                <img src="assets/icons8-notebook-50.png" width="30px" height="30px">
+            </div>
+
+            <div class="akhir">
+                <p style="margin-bottom: 30px;">we launched paleovalley with the <br> beleif that every ingredient is an <br> oppurtuinity to improve your health.</p>
+                <p style="cursor: pointer; font-size: 16px;">Learn More</p>
+            </div>
+        </div>
+        <div class="divs">
+            <div class="awal">
+                <p style="font-size: 22px;">Our Mission</p>
+                <img src="assets/icons8-target-50.png" width="30px" height="30px">
+            </div>
+
+            <div class="akhir">
+                <p style="margin-bottom: 30px;">Our Mission is to create products <br> that always prioritize health over profit.</p>
+                <p style="cursor: pointer; font-size: 16px;">Learn More</p>
+            </div>
+        </div>
+        <div class="divs">
+            <div class="awal">
+                <p style="font-size: 22px;">100% Organic</p>
+                <img src="assets/icons8-swords-50.png" width="30px" height="30px">
+            </div>
+
+            <div class="akhir">
+                <p style="margin-bottom: 30px;">Many Product claim that there <br> products are 100% pure but over <br> product are 100% original</p>
+                <p style="cursor: pointer; font-size: 16px;">Learn More</p>
+            </div>
+        </div>
     </div>
    </section>
 
