About section completed

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <h1 style="font-size: 36px;">Why our deals are <br> best in the market</h1>
         </div>
 
-        <div class="text" style="margin-top: 60px;">
+        <div class="text">
             <p style="font-size: 14px;">At plaeovalley our mission is to help people reclaim vibrant health.We provide <br> Products that prioritize nutrients density in an industry that prioritizes everything <br> else. we believe that every dietry choice and every added ingredients is a <br> powerfull oppurtunities to love and care for ones</p>
         </div> 
     </div>
