The first part of product is completed

--- a/index.html
+++ b/index.html
@@ -197,6 +197,51 @@
     </div>
    </section>
 
+   <!-- About us Section Ends Here -->
+
+
+
+   <!-- The Product Section Start from here -->
+    <section id="product">
+        <div class="pic">
+            <img src="assets/img6.png" width="600px" height="600px">
+            <div class="card">
+                <div class="picture">
+                    <img src="assets/img6.png" width="100px" height="100px" alt="">
+                </div>
+                <div class="upicture">
+                    <p>Organic <span>supergreens</span></p>
+                </div>
+                <p class="Flavours">3 Flavours</p>
+                <div class="foot">
+                    <div class="pehla">
+                        <div class="golo">
+                            <img src="assets/shopping-basket.svg" width="12px" height="12px" alt="">
+                        </div>
+                        <p class="dollar">$25000</p>
+                    </div>
+                    <div class="dosra">
+                        <img src="assets/arrow-small-right.svg" width="30px" height="30px" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="creds">
+            <div class="firstone">
+
+            </div>
+
+            <div class="secondone">
+
+            </div>
+
+
+            <div class="thirdone">
+                
+            </div>
+        </div>
+    </section>
+
 
 
 
