Complete the first phase of creds

--- a/index.html
+++ b/index.html
@@ -228,16 +228,21 @@
         </div>
         <div class="creds">
             <div class="firstone">
+                <p class="feature">Features</p>
+                <h1 class="long">Our Feature Product <br> & its best Features</h1>
+                <p class="desc">Paleovally organic supergreens Organic green powder superfoods for <br> immune support paleogreen Powder blend 28 serving 23 organic <br> Superfoods gluten Free, No cereal grasess, soy or green</p>
 
             </div>
 
             <div class="secondone">
-
+                <div class="square">
+                    
+                </div>
             </div>
 
 
             <div class="thirdone">
-                
+
             </div>
         </div>
     </section>
