Finish The Product Side

--- a/index.html
+++ b/index.html
@@ -236,13 +236,47 @@
 
             <div class="secondone">
                 <div class="square">
-                    
+                    <div class="alpa">
+                        <p>Pure Unflavoured</p>
+                        <button><img src="assets/arrow-small-right.svg" width="25px" height="25px"></button>
+                    </div>
+
+                    <div class="listo">
+                    <div class="list1">
+                        <ul>
+                            <li>full-spectrum</li>
+                            <li>turmeric gently dried</li>
+                        </ul>
+                    </div>
+
+                    <div class="list2">
+                        <ul>
+                            <li>nutrient-dense</li>
+                            <li>Gluten Free</li>
+                        </ul>
+                    </div>
+                    </div>
                 </div>
             </div>
 
 
             <div class="thirdone">
+                <p class="food">Flavoured Food</p>
+                <div class="listi">
+                    <div class="listi1">
+                        <ul>
+                            <li>organic,antioxidants</li>
+                            <li>Opt-prebiotic fibers</li>
+                        </ul>
+                    </div>
 
+                    <div class="listi2">
+                        <ul>
+                            <li>Kale & brocolli</li>
+                            <li>No Artificial sweetner</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
