Complete the Product Section here

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
    <!-- The Product Section Start from here -->
     <section id="product">
         <div class="pic">
-            <img src="assets/img6.png" width="600px" height="600px">
+            <img src="assets/img6.png" width="500px" height="500px" class="seven">
             <div class="card">
                 <div class="picture">
                     <img src="assets/img6.png" width="100px" height="100px" alt="">
