Complete the basics of Listing

--- a/index.html
+++ b/index.html
@@ -294,7 +294,120 @@
         </div>
 
 
-        
+        <div class="middle">
+            <div class="middle1">
+                <div class="half1">
+                    <img src="assets/img6.png" width="250px" height="250px">
+                </div>
+                <div class="half2">
+                    <div class="half21">
+                        <div class="phase1">
+                            <p class="ese">Essentials Electrolytes</p>
+                        </div>
+                        <div class="phase2">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <p class="num">4.8</p>
+                        </div>
+                    </div>
+
+                    <div class="half22" style="padding: 4px;">
+                        <p style="font-size: 10px;">Get <span style="color: rgba(238, 205, 14, 0.804);">FREE SHIPPING</span> if you add two more bags</p>
+                    </div>
+
+                    <div class="half33">
+                        <p style="font-size: 30px;">$60</p>
+                        <div class="gola" style="cursor: pointer;">
+                            <img src="assets/icons8-cart-32.png" width="30px" height="30px" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="middle2">
+                <div class="half1">
+                    <img src="assets/img4.png" width="250px" height="250px">
+                </div>
+                <div class="half2">
+                    <div class="half21">
+                        <div class="phase1">
+                            <p class="ese">Essentials Electrolytes</p>
+                        </div>
+                        <div class="phase2">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <p class="num">4.8</p>
+                        </div>
+                    </div>
+
+                    <div class="half22" style="padding: 4px;">
+                        <p style="font-size: 10px;">Get <span style="color: rgba(238, 205, 14, 0.804);">FREE SHIPPING</span> if you add two more bags</p>
+                    </div>
+
+                    <div class="half33">
+                        <p style="font-size: 30px;">$60</p>
+                        <div class="gola" style="cursor: pointer;">
+                            <img src="assets/icons8-cart-32.png" width="30px" height="30px" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="middle3">
+                <div class="half1">
+                    <img src="assets/img8.png" width="250px" height="250px">
+                </div>
+                <div class="half2">
+                    <div class="half21">
+                        <div class="phase1">
+                            <p class="ese">Essentials Electrolytes</p>
+                        </div>
+                        <div class="phase2">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <p class="num">4.8</p>
+                        </div>
+                    </div>
+
+                    <div class="half22" style="padding: 4px;">
+                        <p style="font-size: 10px;">Get <span style="color: rgba(238, 205, 14, 0.804);">FREE SHIPPING</span> if you add two more bags</p>
+                    </div>
+
+                    <div class="half33">
+                        <p style="font-size: 30px;">$60</p>
+                        <div class="gola" style="cursor: pointer;">
+                            <img src="assets/icons8-cart-32.png" width="30px" height="30px" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="change">
+            <div class="arrow-left">
+                <img src="assets/arrow-left-white.png" width="20px" height="20px">
+            </div>
+
+
+            <div class="dots" style="gap: 20px;">
+                <div class="circle active" style="border: 1px solid whitesmoke;">
+                <div class="dot" style="border: 2px solid whitesmoke;"></div>
+                </div>
+                <div class="circle">
+                <div class="dot" style="border: 2px solid whitesmoke;"></div>
+                </div>
+                <div class="circle">
+                <div class="dot" style="border: 2px solid whitesmoke;"></div>
+                </div>
+                <div class="circle">
+                <div class="dot" style="border: 2px solid whitesmoke;"></div>
+                </div>
+                <div class="circle">
+                <div class="dot" style="border: 2px solid whitesmoke;"></div>
+                </div>
+            </div>
+
+
+            <div class="arrow-right">
+                <img src="assets/white-right.png" width="20px" height="20px">
+            </div>
+        </div>
 
     </section>
 
