Comlpete the Product Listing

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <div class="middle">
             <div class="middle1">
                 <div class="half1">
-                    <img src="assets/img6.png" width="250px" height="250px">
+                    <img src="assets/img6.png" width="250px" height="250px" class="slide">
                 </div>
                 <div class="half2">
                     <div class="half21">
@@ -324,7 +324,7 @@
             </div>
             <div class="middle2">
                 <div class="half1">
-                    <img src="assets/img4.png" width="250px" height="250px">
+                    <img src="assets/img4.png" width="250px" height="250px" class="slide">
                 </div>
                 <div class="half2">
                     <div class="half21">
@@ -351,7 +351,7 @@
             </div>
             <div class="middle3">
                 <div class="half1">
-                    <img src="assets/img8.png" width="250px" height="250px">
+                    <img src="assets/img8.png" width="250px" height="250px" class="slide">
                 </div>
                 <div class="half2">
                     <div class="half21">
@@ -380,31 +380,28 @@
 
 
         <div class="change">
-            <div class="arrow-left">
+            <div class="arrow-left" id="prev">
                 <img src="assets/arrow-left-white.png" width="20px" height="20px">
             </div>
 
 
             <div class="dots" style="gap: 20px;">
-                <div class="circle active" style="border: 1px solid whitesmoke;">
+                <div id="circle" class="circle active" style="border: 1px solid whitesmoke;">
                 <div class="dot" style="border: 2px solid whitesmoke;"></div>
                 </div>
-                <div class="circle">
+                <div id="circle" class="circle">
                 <div class="dot" style="border: 2px solid whitesmoke;"></div>
                 </div>
-                <div class="circle">
+                <div id="circle" class="circle">
                 <div class="dot" style="border: 2px solid whitesmoke;"></div>
                 </div>
-                <div class="circle">
-                <div class="dot" style="border: 2px solid whitesmoke;"></div>
-                </div>
-                <div class="circle">
+                <div id="circle" class="circle">
                 <div class="dot" style="border: 2px solid whitesmoke;"></div>
                 </div>
             </div>
 
 
-            <div class="arrow-right">
+            <div class="arrow-right" id="next">
                 <img src="assets/white-right.png" width="20px" height="20px">
             </div>
         </div>
