Complete The Listing Section Functionality

--- a/index.html
+++ b/index.html
@@ -386,17 +386,17 @@
 
 
             <div class="dots" style="gap: 20px;">
-                <div id="circle" class="circle active" style="border: 1px solid whitesmoke;">
-                <div class="dot" style="border: 2px solid whitesmoke;"></div>
+                <div id="circle" class="circles active">
+                <div class="doto"></div>
                 </div>
-                <div id="circle" class="circle">
-                <div class="dot" style="border: 2px solid whitesmoke;"></div>
+                <div id="circle" class="circles">
+                <div class="doto"></div>
                 </div>
-                <div id="circle" class="circle">
-                <div class="dot" style="border: 2px solid whitesmoke;"></div>
+                <div id="circle" class="circles">
+                <div class="doto"></div>
                 </div>
-                <div id="circle" class="circle">
-                <div class="dot" style="border: 2px solid whitesmoke;"></div>
+                <div id="circle" class="circles">
+                <div class="doto"></div>
                 </div>
             </div>
 
