Complete The Testimonials Section Completly

--- a/index.html
+++ b/index.html
@@ -409,6 +409,110 @@
     </section>
 
 
+    <!-- Listing Side Ends Here -->
+
+
+    <!-- Testimonials Section Start From Here -->
+
+    <section id="Testimonials">
+
+        <div class="description">
+            <p class="test">Testimonials</p>
+            <h1 class="check">Check our Satisfied Clients</h1>
+            <p class="ita">At PaleoValley People Love Our Services and products that <br> help them to connected with us</p>
+        </div>
+
+
+        <div class="dabi">
+            <div class="firstdabi">
+                <div class="border">
+                    <p class="opinion">These greens taste good and so far i like them a lot. <br> i have only been  using them for a few days and look forward to more experience with  them so see the benefits.</p>
+
+                    <div class="customer">
+                        <div class="customer1">
+                            <div class="profile"></div>
+                            <div class="name">
+                                <p class="cham">Cham</p>
+                                <p class="new">New York</p>
+                            </div>
+                        </div>
+                        <div class="stars">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                        </div>
+                    </div>
+                </div>
+                <div class="border">
+                    <p class="opinion">I trust Paleovalley Because i know that the owner is very <br> picky about  where he sources his products and that they are very pure and  clean products.</p>
+
+                    <div class="customer">
+                        <div class="customer1">
+                            <div class="profile2"></div>
+                            <div class="name">
+                                <p class="cham">Scopic Software</p>
+                                <p class="new">Chicago</p>
+                            </div>
+                        </div>
+                        <div class="stars">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="seconddabi">
+                <div class="border">
+                    <p class="opinion">I really like the taste and the feel good knowing i am getting lots of good nutrients i add it to water or to my <br> fruit and viggie smoothies. Either way it tastes good.</p>
+
+                    <div class="customer">
+                        <div class="customer1">
+                            <div class="profile3"></div>
+                            <div class="name">
+                                <p class="cham">Lee</p>
+                                <p class="new">L.A</p>
+                            </div>
+                        </div>
+                        <div class="stars">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                        </div>
+                    </div>
+                </div>
+                <div class="border">
+                    <p class="opinion">Easy to blend and noticed improve energy. along with good taste  Overall i would recommend for anyone looking for a dose of  organic greens</p>
+
+                    <div class="customer">
+                        <div class="customer1">
+                            <div class="profile4"></div>
+                            <div class="name">
+                                <p class="cham">Cham</p>
+                                <p class="new">New York</p>
+                            </div>
+                        </div>
+                        <div class="stars">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                            <img src="assets/icons8-star-48.png" width="10px" height="10px">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
 
     <script src="index.js"></script>
