Complete the Newsletter

--- a/index.html
+++ b/index.html
@@ -413,7 +413,6 @@
 
 
     <!-- Testimonials Section Start From Here -->
-
     <section id="Testimonials">
 
         <div class="description">
@@ -511,6 +510,23 @@
             </div>
         </div>
     </section>
+    <!-- Testimonials Section Ends Here -->
+
+
+
+
+
+    <div class="newsletter">
+        <div class="cover">
+            <h1 style="color: whitesmoke; margin-bottom: 30px;">Subscribe to Our Newsletter</h1>
+            <p style="font-size: 12px; font-weight: bold; color: whitesmoke; line-height: 2;">Sign up today writing copy is time consuming and difficult <br> headlimes Artificial Can Take Your Part.</p>
+        </div>
+
+        <div class="input">
+            <input type="text" placeholder="Enter email address">
+            <button>Get Started</button>
+        </div>
+    </div>
 
 
 
