Start The Footer Section

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
 
 
-
+    <!-- Newsletter Start from Here -->
     <div class="newsletter">
         <div class="cover">
             <h1 style="color: whitesmoke; margin-bottom: 30px;">Subscribe to Our Newsletter</h1>
@@ -527,7 +527,26 @@
             <button>Get Started</button>
         </div>
     </div>
+    <!-- NewsLetter End Here -->
 
+
+    <footer id="footer">
+        <div class="upper">
+            <div class="upper1">
+                <img src="assets/logo.svg" width="200px" height="100px" alt="logo">
+                <p style="font-size: 12px;">No Need of Worry,we will help you <br> make sense of it all</p>
+                <div class="mail">
+                    <input type="text" placeholder="Your Email">
+                    <button><img src="assets/arrow-small-right.svg" width="40px" height="30px" alt=""></button>
+                </div>
+            </div>
+            <div class="upper2"></div>
+            <div class="upper3"></div>
+            <div class="upper4"></div>
+            <div class="upper5"></div>
+        </div>
+        <div class="lower"></div>
+    </footer>
 
 
 
