Complete the Footer Section

--- a/index.html
+++ b/index.html
@@ -533,19 +533,54 @@
     <footer id="footer">
         <div class="upper">
             <div class="upper1">
-                <img src="assets/logo.svg" width="200px" height="100px" alt="logo">
-                <p style="font-size: 12px;">No Need of Worry,we will help you <br> make sense of it all</p>
+                <img src="assets/logo.svg" width="200px" height="100px" alt="logo" class="logo">
+                <p style="font-size: 12px;" class="logot">No Need of Worry,we will help you <br> make sense of it all</p>
                 <div class="mail">
                     <input type="text" placeholder="Your Email">
                     <button><img src="assets/arrow-small-right.svg" width="40px" height="30px" alt=""></button>
                 </div>
             </div>
-            <div class="upper2"></div>
-            <div class="upper3"></div>
-            <div class="upper4"></div>
-            <div class="upper5"></div>
+            <div class="upper2">
+                <ul class="dota">
+                    <li>About</li>
+                    <li>What we Offer</li>
+                    <li>Features</li>
+                    <li>Pricing</li>
+                    <li>Leaderships</li>
+                </ul>
+            </div>
+            <div class="upper3">
+                <ul class="dota">
+                    <li>Solutions</li>
+                    <li>Careers</li>
+                    <li>Management</li>
+                    <li>Workflow</li>
+                    <li>Finance</li>
+                    <li>Resources</li>
+                </ul>
+            </div>
+            <div class="upper4">
+                <ul class="dota">
+                    <li>Personal</li>
+                    <li>Features</li>
+                    <li>Accounts</li>
+                    <li>Payments</li>
+                    <li>Profiles</li>
+                </ul>
+            </div>
+            <div class="upper5">
+                <ul class="dota">
+                    <li>Socials</li>
+                    <li>Twitter</li>
+                    <li>Facebook</li>
+                    <li>Insatgram</li>
+                    <li>LinkedIn</li>
+                </ul>
+            </div>
         </div>
-        <div class="lower"></div>
+        <div class="lower">
+            <p>&copy; Copyright 2025 by code_it0.All Rights Reserved</p>
+        </div>
     </footer>
 
 
