Solve the issue of image carousel

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 
         <div class="direction">
-            <div class="arrow-left" id="arrow-left">
+            <div class="arrow-left" id="arrow-left" style="visibility: hidden;">
                 <img src="assets/arrow-small-left.svg" width="20px" height="20px" style="cursor: pointer;">
             </div>
 
