--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
             <div class="big1">
                 <p>INTRO</p>
-                <h1 style="margin-top: 20px; font-size: 50px;">PaleoValley Organic <br> Supergreens Powder</h1>
-                <p style="margin-top: 20px; font-size: 18px;">Get Delicious energy support with 23 organic raw superfoods: <br> Organic Supergreens is a powerfull blend of organic antioxidents <br> rich superfoods, including kale, brocolli and turmeric gently dried to <br> preserve their nutrients and make them easy to  absorb by your digestive <br> tract.</p>
+                <h1 id="heading1">PaleoValley Organic <br> Supergreens Powder</h1>
+                <p class="page1">Get Delicious energy support with 23 organic raw superfoods: <br> Organic Supergreens is a powerfull blend of organic antioxidents <br> rich superfoods, including kale, brocolli and turmeric gently dried to <br> preserve their nutrients and make them easy to  absorb by your digestive <br> tract.</p>
                 <button style="color: #fefefe; margin-top: 20px; padding-left: 40px; padding-right: 40px; padding-top: 20px; padding-bottom: 20px; background-color: #b74e21; border-radius: 8px; cursor: pointer;">Order Now</button>
 
                 <div class="threads" style="display: flex; gap: 20px; margin-top: 20px;">
